--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,12 @@ env_logger = "0.11.8"
 log = "0.4.27"
 bytemuck = "1.23.1"
 
+[build-dependencies]
+serde = { version = "1.0.219", features = ["derive"] }
+serde_yaml = "0.9.34"
+serde_json = "1.0.140"
+anyhow = "1.0.98"
+
 [[example]]
 name = "immediate"
 path = "examples/immediate.rs"
@@ -36,3 +42,6 @@ path = "examples/grid.rs"
 [lib]
 name = "luna"
 path = "src/lib.rs"
+
+[package.metadata.design-tokens]
+out = "assets/design/tokens.json"
