Add Image widget

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ env_logger = "0.11.8"
 log = "0.4.27"
 bytemuck = "1.23.1"
 arboard = "3.5.0"
+image = "0.25.6"
+anyhow = "1.0.98"
 
 [build-dependencies]
 serde = { version = "1.0.219", features = ["derive"] }
@@ -47,6 +49,10 @@ path = "examples/scrollable.rs"
 [[example]]
 name = "text_input"
 path = "examples/text_input.rs"
+
+[[example]]
+name = "image"
+path = "examples/image.rs"
 
 [lib]
 name = "luna"
